--- a/fe-web/render/body/artist-detail.hbs
+++ b/fe-web/render/body/artist-detail.hbs
@@ -24,7 +24,7 @@
 
 
                 </div>
-                <h2 class="disco-info__title">MEMBRI DEL GRUPPO</h2>
+                <h2 class="disco-info__title">GROUP MEMBERS</h2>
                 <ul>
                     {{#each gruppo.membri}}
                         <li class="membro__thumb">
@@ -45,104 +45,43 @@
                     {{/each}}
 
                 </ul>
-                <div>
+                {{#if gruppo.videos_embed}}
+                    <div>
 
 
-                    <iframe width="100%" height="360px"
-                            src="https://www.youtube.com/embed/eyrAK_OHN90?rel=0&amp;showinfo=0" frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
+                        {{#each gruppo.videos_embed}}
+                            <div class="videos_embed">
+                                {{{this}}}
+                            </div>
+                        {{/each}}
+                    </div>
+                {{/if}}
             </div>
             <div class="disco__right">
                 <figure class="disco-cover">
                     <img src="{{gruppo.profileImage}}">
                 </figure>
-                <div>
-                    <ul>
-                        <li>
-                            <iframe style="border: 0; width: 100%; height: 42px;"
-                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
-                                    seamless><a
-                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
-                                for mature audiences by CHRONICS</a></iframe>
-                        </li>
-                        <li>
-                            <iframe style="border: 0; width: 100%; height: 42px;"
-                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
-                                    seamless><a
-                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
-                                for mature audiences by CHRONICS</a></iframe>
-                        </li>
-                        <li>
-                            <iframe style="border: 0; width: 100%; height: 42px;"
-                                    src="https://bandcamp.com/EmbeddedPlayer/album=745234224/size=small/bgcol=ffffff/linkcol=0687f5/track=2656877289/transparent=true/"
-                                    seamless><a
-                                    href="http://chronics.bandcamp.com/album/suggested-for-mature-audiences">Suggested
-                                for mature audiences by CHRONICS</a></iframe>
-                        </li>
-                    </ul>
-                </div>
-                <!--<div>-->
-                <!--<iframe style="border: 0; width: 100%; height: 274px;"-->
-                <!--src="https://bandcamp.com/EmbeddedPlayer/album=2708330898/size=large/bgcol=ffffff/linkcol=f171a2/artwork=none/transparent=true/"-->
-                <!--seamless><a href="http://marrano.bandcamp.com/album/ep-2015">ep 2015 by MARRANO</a></iframe>-->
-                <!--</div>-->
+
+                {{#if gruppo.tracks_embed}}
+                    <div>
+                        <ul>
+                            {{#each gruppo.tracks_embed}}
+                                <li class="tracks_embed">
+                                    {{{this}}}
+                                </li>
+
+                            {{/each}}
+                        </ul>
+                    </div>
+                {{/if}}
+
+
             </div>
 
         </div>
     </div>
 
     <div class="content-wrapper">
-        <!--<div class="artist-detail__block">-->
-
-
-        <!--<p>{{gruppo.biography}}</p>-->
-
-
-        <!--</div>-->
-        <!--<div class="artist-detail__block artist-detail__flex">-->
-        <!--<div class="artist-detail__profile-image" style="background-image: url('{{gruppo.profileImage}}')"></div>-->
-        <!--<div class="artist-detail__info-blocks">-->
-        <!--<div class="artist-detail__info-block">-->
-        <!--<h3 class="block-title textblock-title">About</h3>-->
-        <!--<p>{{gruppo.informations}}</p>-->
-        <!--<p class="artist-detail__info-block__text-small">-->
-        <!--<span>genere: </span>{{gruppo.genere}}</p>-->
-        <!--<p class="artist-detail__info-block__text-small">{{gruppo.location}}</p>-->
-
-        <!--<ul class="membri">-->
-            <!--{{#each gruppo.membri}}-->
-        <!--<li class="membro__thumb">-->
-        <!--<figure class="membro__thumb-image">-->
-        <!--<img src="{{this.profileImage}}">-->
-        <!--</figure>-->
-        <!--<div class="text-ctr">-->
-        <!--<p class="membro__thumb-name">{{this.name}}</p>-->
-        <!--<ul class="strumenti">-->
-            <!--{{#each this.strumenti}}-->
-            <!--<li class="strumento">-->
-            <!--<p>{{this}}</p>-->
-            <!--</li>-->
-                <!--{{/each}}-->
-        <!--</ul>-->
-        <!--</div>-->
-
-
-        <!--</li>-->
-            <!--{{/each}}-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--<div class="artist-detail__info-block artist-detail__info-block--ligher">-->
-
-
-        <!--<h3 class="block-title textblock-title">Contacts</h3>-->
-
-        <!--<a href="mailto:{{gruppo.email}}"><p class="artist-detail__info-block__text-small">mail</p></a>-->
-        <!--<a href="{{gruppo.website}}"><p class="artist-detail__info-block__text-small">site</p></a>-->
-
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
 
     </div>
     <div class="discografia-ctr">
