--- a/fe-web/render/body/disco-detail.hbs
+++ b/fe-web/render/body/disco-detail.hbs
@@ -1,42 +1,44 @@
 <div class="disco-detail">
-    <div class="disco-image" style="background-image: url('/uploads/copertina.jpg')">
+    <div class="disco-image" style="background-image: url('{{disco.coverImage}}')">
         <div class="content-wrapper">
-            <h1 class="disco-image__title">Nome del disco</h1>
-            <p>Marrano</p>
+            <h1 class="disco-image__title">{{disco.name}}</h1>
+            <p>{{disco.publication_date}}</p>
         </div>
 
     </div>
     <div class="disco-info">
         <div class="content-wrapper disco-info__wrapper">
             <div class="disco-text-ctr">
-                <div class="disco-text__wrapper" >
+                <div class="disco-text__wrapper">
                     <h2 class="disco-info__title">INTRODUCING</h2>
                     <p class="disco-info__text">
-                        Il 22 settembre uscirà Gioventù Spaccata, il nostro primo disco che troverete solo al banchetto
-                        durante i concerti (in realtà lo spediamo anche).
-                        A breve uscirà anche una data, ma ATTENZIONE non è quella del release, quella della presentazione
-                        del disco sarà il 30 settembre e ancora aspettiamo a dirlo...quindi segnatevi anche questa di data.
+                        {{{disco.description}}}
                     </p>
-                    <p class="disco-info__by"><span>by:</span> <a href="/">Marrano</a></p>
+                    <!--<p class="disco-info__by"><span>by:</span> <a href="/">Marrano</a></p>-->
                 </div>
 
-                <div>
 
-                    <!--<h2 class="disco-info__title">VIDEO</h2>-->
-                    <iframe width="100%" height="360px"
-                            src="https://www.youtube.com/embed/eyrAK_OHN90?rel=0&amp;showinfo=0" frameborder="0"
-                            allowfullscreen></iframe>
-                </div>
+
+                {{#if disco.videos_embed}}
+                    <div>
+                        {{#each disco.videos_embed}}
+                            {{{this}}}
+                        {{/each}}
+                    </div>
+                {{/if}}
+
+
             </div>
             <div class="disco__right">
                 <figure class="disco-cover">
-                    <img src="/uploads/copertina.jpg">
+                    <img src="{{disco.coverImage}}">
                 </figure>
-                <div>
-                    <iframe style="border: 0; width: 100%; height: 274px;"
-                            src="https://bandcamp.com/EmbeddedPlayer/album=2708330898/size=large/bgcol=ffffff/linkcol=f171a2/artwork=none/transparent=true/"
-                            seamless><a href="http://marrano.bandcamp.com/album/ep-2015">ep 2015 by MARRANO</a></iframe>
-                </div>
+                {{#if disco.album_tracks_embed}}
+                    <div>
+                        {{{disco.album_tracks_embed}}}
+                    </div>
+                {{/if}}
+
             </div>
 
         </div>
