--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -14,7 +14,7 @@
     align-items: flex-end;
     background-color: @saddle-brown;
     position: relative;
-    .content-wrapper{
+    .content-wrapper {
       width: 100%;
       color: white;
 
@@ -23,7 +23,7 @@
       z-index: 1;
       padding: 50px 13px;
     }
-    &__title{
+    &__title {
       font-size: 52px;
     }
     &:after {
@@ -38,7 +38,7 @@
       z-index: 0;
     }
   }
-  &-text__wrapper{
+  &-text__wrapper {
     padding: 50px 60px 30px 0;
     line-height: 1.5;
 
@@ -46,8 +46,9 @@
   }
   &-text-ctr {
     width: 50%;
-
-
+    iframe {
+      height: 360px;
+    }
   }
   &-cover {
 
@@ -77,13 +78,13 @@
       font-size: 12px;
       margin-top: 10px;
       text-align: right;
-      a{
+      a {
         font-weight: bold;
       }
     }
   }
-&__right{
-  width: 50%;
-  transform: translateY(-250px);
-}
+  &__right {
+    width: 50%;
+    transform: translateY(-250px);
+  }
 }
