--- a/fe-web/render/body/artist-detail.hbs
+++ b/fe-web/render/body/artist-detail.hbs
@@ -13,8 +13,8 @@
             <div class="disco-text-ctr">
                 <div class="disco-text__wrapper">
                     <h2 class="disco-info__title">INTRODUCING</h2>
-                    <p class="disco-info__text">
-                        {{gruppo.biography}}</p>
+                    <div class="disco-info__text">
+                        {{{gruppo.biography}}}</div>
                     <div class="more-info">
                         <p><strong>genere:</strong> {{gruppo.genere}}</p>
                         <p><strong>location:</strong> {{gruppo.location}}</p>
