--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -61,7 +61,8 @@
     }
   }
   &-info {
-
+    z-index: 1;
+    position: relative;
     &__wrapper {
       display: flex;
     }
@@ -86,6 +87,7 @@
   }
   &__right {
     width: 50%;
-    transform: translateY(-250px);
+   // transform: translateY(-250px);
+    margin-top: -250px;
   }
 }
