--- a/static/less/_artist-detail.less
+++ b/static/less/_artist-detail.less
@@ -3,6 +3,7 @@
 .artist-detail {
   &__cover {
     background-size: cover;
+    background-position: center;
     width: 100%;
     height: ~"calc(100vh - 155px)";
     position: relative;
