--- a/static/less/index.less
+++ b/static/less/index.less
@@ -60,7 +60,9 @@ strong {
     font-weight: bold;
   }
 }
-
+.retroshadow {
+  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.41);
+}
 @media (max-width: 767px) {
   .content-wrapper {
     padding: 0 7px;
