--- a/fe-web/render/body/artist-detail.hbs
+++ b/fe-web/render/body/artist-detail.hbs
@@ -2,7 +2,7 @@
 
     <div class="artist-detail__cover" style="background-image: url('{{gruppo.coverImage}}')">
         <div class="content-wrapper">
-            <div class="visual__text">
+            <div class="retroshadow visual__text">
                 <h1>{{gruppo.name}}</h1>
                 <p>{{gruppo.informations}}</p>
             </div>
