--- a/fe-web/render/body/disco-detail.hbs
+++ b/fe-web/render/body/disco-detail.hbs
@@ -1,6 +1,6 @@
 <div class="disco-detail">
     <div class="disco-image" style="background-image: url('{{disco.coverImage}}')">
-        <div class="content-wrapper">
+        <div class="retroshadow content-wrapper">
             <h1 class="disco-image__title">{{disco.name}}</h1>
             <p>{{disco.publication_date}}</p>
         </div>
