--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -20,7 +20,7 @@
 
       font-family: "Raleway";
       position: relative;
-      z-index: 1;
+      z-index: 2;
       padding: 50px 13px;
     }
     &__title {
@@ -89,5 +89,12 @@
     width: 50%;
    // transform: translateY(-250px);
     margin-top: -250px;
+    .tracks_embed{
+      line-height: 1.5;
+      color: #8D615B;
+      p{
+        margin:30px 0;
+      }
+    }
   }
 }
