--- a/static/less/_artists.less
+++ b/static/less/_artists.less
@@ -66,7 +66,7 @@
 @media (max-width: 767px) {
   .artist {
     &-thumb {
-
+      width: 100%;
       max-width: 100%;
       margin-bottom: 60px;
       &:last-child {
