--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -98,3 +98,27 @@
     }
   }
 }
+@media screen and(max-width: 767px) {
+  .disco-text-ctr {
+    width: 100%;
+  }
+  .disco-text__wrapper{
+    padding: 50px 0px 30px;
+  }
+  .disco-info__wrapper {
+
+    flex-direction: column;
+  }
+  .disco__right{
+    width: 100%;
+    margin-top: 0;
+  }
+  .discografia{
+    flex-direction: column;
+    .disco{
+      width: 100%;
+      margin: 0 0 30px 0;
+    }
+  }
+
+}
