--- a/fe-web/render/body/artists.hbs
+++ b/fe-web/render/body/artists.hbs
@@ -1,5 +1,5 @@
 <div class="artists-ctr">
-    <div class="homepage__visual" style="background-image: url('/uploads/artists-cover.jpg')">
+    <div class="homepage__visual" style="background-image: url('/static/img/artists-bg.jpg')">
         <div class="content-wrapper">
             <div class="visual__text">
                 <p>Artists</p>
