--- a/fe-web/render/body/posts.hbs
+++ b/fe-web/render/body/posts.hbs
@@ -1,5 +1,5 @@
 <div class="posts-ctr">
-    <div class="homepage__visual" style="background-image: url('/uploads/posts-cover.jpg')">
+    <div class="homepage__visual" style="background-image: url('/static/img/posts-cover.jpg')">
         <div class="content-wrapper">
             <div class="visual__text">
                 <p>Posts</p>
