--- a/fe-web/render/include/menu.hbs
+++ b/fe-web/render/include/menu.hbs
@@ -21,7 +21,7 @@
                 <div class="line-2"><i></i></div>
 
                 <div class="line-3"><i></i></div>
-                <a href="/artists">
+                <a href="/gruppi">
                     artists
                 </a>
             </li>
