--- a/static/less/_artist-detail.less
+++ b/static/less/_artist-detail.less
@@ -22,7 +22,11 @@
       h1 {
         font-size: 52px;
       }
-
+      p {
+        width: 50%;
+        padding-right: 10px;
+        margin-top: 8px;
+      }
     }
     &::after {
       content: "";
@@ -176,7 +180,7 @@
       color: white;
       background: rgba(0, 0, 0, 0.30);
       transform: translateY(100%);
-      transition:all .4s ease-out;
+      transition: all .4s ease-out;
     }
     &__title {
       font-family: Raleway;
