--- a/static/less/_artist-detail.less
+++ b/static/less/_artist-detail.less
@@ -192,3 +192,19 @@
     }
   }
 }
+
+@media all and(max-width: 767px) {
+  .artist-detail {
+    &__cover {
+      .visual__text {
+        p {
+          width: 100%;
+          padding-right: 10px;
+          margin-top: 8px;
+        }
+      }
+
+    }
+
+  }
+}
