--- a/fe-web/render/body/who-we-are.hbs
+++ b/fe-web/render/body/who-we-are.hbs
@@ -1,5 +1,12 @@
 <div class="who-we-are">
     <div class="empty">
-        <p> we are working on it! </p>
+        <p> Lo StoneBridge Studio è un insieme di cose.
+            è un capanno nelle campagne cesenati.
+            è la casa che i Sunday Morning abitano da 12 anni.
+            che hanno sistemato pezzo per pezzo.
+            dove sono nati e dove sono stati registrati i loro ultimi due dischi.
+            Lo StoneBridge Studio è un luogo che da qualche tempo vede nascere anche i dischi di altri gruppi della zona.
+            dove si registra spesso tutti insieme e dove ci si ritrova a riascoltare quello che si è fatto, ancora tutti insieme, in sei metri quadrati.
+            è un luogo fumatori con un grande spiazzo e un pozzo. </p>
     </div>
 </div>
