--- a/cms/fe-web/render/include/scripts.hbs
+++ b/cms/fe-web/render/include/scripts.hbs
@@ -1,1 +1,3 @@
+<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+<script></script>
 <script src="/static/js/libs/require.js" data-main="/static/js/config.js" async></script>
