--- a/static/less/_footer.less
+++ b/static/less/_footer.less
@@ -2,12 +2,12 @@
 
 .footer {
   background: @dark-olive-green;
-  height: 300px;
-  margin-top: 30px;
+
+
   .buttons {
     display: flex;
     justify-content: flex-end;
-    padding: 13px;
+    padding:20px 13px;
 
     align-items: flex-end;
   }
@@ -51,7 +51,7 @@
     display: flex;
     justify-content: flex-end;
     padding: 0;
-    margin-top: 10px;
+
   }
 }
 
