--- a/static/less/_artists.less
+++ b/static/less/_artists.less
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 1%;
+    margin-bottom: 60px;
     &:hover {
       .artist__image {
         filter: saturate(1);
