--- a/fe-web/render/include/header.hbs
+++ b/fe-web/render/include/header.hbs
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" data-mediator="menu-visibility">
     <a href="/" class="text-ctr">
         <div class="equalizer-CTR">
             <div class="bar-c">
