--- a/fe-web/render/include/scripts.hbs
+++ b/fe-web/render/include/scripts.hbs
@@ -1,5 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 <script src="/static/js/main.js"></script>
+<script src="/static/js/libs/require.js" async data-main="/static/js/config.js"></script>
 {{#if _production}}
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
