--- a/static/less/index.less
+++ b/static/less/index.less
@@ -12,23 +12,28 @@
 @import "_artists";
 @import "_artist-detail";
 @import "_disco";
+
 ::selection {
   background: #CCA684;
   color: white;
 }
+
 body, html {
 
   font-family: 'Open Sans', sans-serif;
   width: 100%;
   color: @saddle-brown;
 }
+
 a {
   text-decoration: none;
   color: @saddle-brown;
 }
+
 strong {
   font-weight: bold;
 }
+
 .content-wrapper {
   max-width: 1280px + 26px;
   padding: 0 13px;
@@ -41,6 +46,10 @@ strong {
   position: relative;
   z-index: 0;
   padding-top: 54px;
+  background: @saddle-brown;
+}
+.barba-container{
+  background: white;
 }
 
 //body.fixed{
@@ -60,9 +69,11 @@ strong {
     font-weight: bold;
   }
 }
+
 .retroshadow {
   text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.41);
 }
+
 @media (max-width: 767px) {
   .content-wrapper {
     padding: 0 7px;
