--- a/cms/fe-web/render/include/content.hbs
+++ b/cms/fe-web/render/include/content.hbs
@@ -3,12 +3,12 @@
 
         <ul class="entity__actions">
             <li class="entity__action">
-                <a href="/contents/{{id}}" class="entity__action--btn">
+                <a href="/cms/contents/{{id}}" class="entity__action--btn">
                     <span class="typcn typcn-plus"></span>
                 </a>
             </li>
             <li class="entity__action">
-                <a href="/contents/search/{{id}}" class="entity__action--btn">
+                <a href="/cms/contents/search/{{id}}" class="entity__action--btn">
                     <span class="typcn typcn-zoom"></span>
                 </a>
             </li>
@@ -21,17 +21,17 @@
             <li class="record">
                 <ul class="record__item entity__actions">
                     <li>
-                        <a href="/contents/{{../id}}/{{_id}}" class=" edit entity__action--btn record__item" title="Vai al dettaglio e modifica">
+                        <a href="/cms/contents/{{../id}}/{{_id}}" class=" edit entity__action--btn record__item" title="Vai al dettaglio e modifica">
                             <span class="typcn typcn-edit"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="/contents/delete/{{../id}}/{{_id}}" class="entity__action--btn delete record__item" title="Elimina il record">
+                        <a href="/cms/contents/delete/{{../id}}/{{_id}}" class="entity__action--btn delete record__item" title="Elimina il record">
                             <span class="typcn typcn-trash"></span>
                         </a>
                     </li>
                 </ul>
-                <a href="/contents/{{../id}}/{{_id}}" class="name record__item" title="Vai al dettaglio e modifica">
+                <a href="/cms/contents/{{../id}}/{{_id}}" class="name record__item" title="Vai al dettaglio e modifica">
                     {{name.value}}
                 </a>
 
