--- a/cms/fe-web/render/include/fields/relation-field.hbs
+++ b/cms/fe-web/render/include/fields/relation-field.hbs
@@ -9,7 +9,7 @@
             <option value="{{value}}" {{#ifCond ../value._id '==' value}}selected{{/ifCond}}>{{label}}</option>
         {{/each}}
     </select>
-    <a href="javascript:void(0);" title="Vai al dettaglio" data-pattern-url="/contents/{{toEntity.relationTo}}/" class="detail-btn js-detail-btn">
+    <a href="javascript:void(0);" title="Vai al dettaglio" data-pattern-url="/cms/contents/{{toEntity.relationTo}}/" class="detail-btn js-detail-btn">
         <span class="  typcn typcn-edit"></span>
     </a>
 </div>
