--- a/cms/fe-web/render/include/menu.hbs
+++ b/cms/fe-web/render/include/menu.hbs
@@ -5,7 +5,7 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="/contents">
+                <a href="/cms/contents">
                     <span>contents</span>
                     <span class="typcn typcn-chevron-right"></span>
                 </a>
