--- a/cms/fe-web/render/body/search-contents.hbs
+++ b/cms/fe-web/render/body/search-contents.hbs
@@ -4,12 +4,12 @@
             <h2 class="entity__name">{{name}}</h2>
             <ul class="content__actions">
                 <li>
-                    <a href="/contents/new/{{_id}}">
+                    <a href="/cms/contents/new/{{_id}}">
                         add new
                     </a>
                 </li>
                 <li>
-                    <a href="/contents/search/{{_id}}">
+                    <a href="/cms/contents/search/{{_id}}">
                         search
                     </a>
                 </li>
@@ -17,7 +17,7 @@
             <ul class="entities">
                 {{#each data}}
                     <li class="entity">
-                        <a href="/contents/{{id}}" class="entity__item">
+                        <a href="/cms/contents/{{id}}" class="entity__item">
                             {{name}}
                         </a>
                         <ul class="entity__item content__actions entity__actions">
