--- a/fe-web/render/body/artists.hbs
+++ b/fe-web/render/body/artists.hbs
@@ -1,11 +1,15 @@
 <div class="artists-ctr">
-    <div class="homepage__visual" style="background-image: url('/static/img/artists-bg.jpg')">
-        <div class="content-wrapper">
-            <div class="visual__text">
-                <p>Artists</p>
+    <div class="bg-image-ctr">
+        <div class="homepage__visual"
+             data-mediator="bg-image"
+             data-image="/static/img/artists-bg.jpg">
+            <div class="content-wrapper">
+                <div class="slidein-05 visual__text">
+                    <p>Artists</p>
+                </div>
             </div>
-        </div>
 
+        </div>
     </div>
     <div class="artists">
         <div class="content-wrapper">
