--- a/fe-web/render/layout/index.hbs
+++ b/fe-web/render/layout/index.hbs
@@ -18,8 +18,8 @@
 {{> svgs}}
 {{> header}}
 
-<div id="barba-wrapper">
-    <div class="barba-container">
+<div id="barba-wrapper" data-mediator="page-transitions">
+    <div class="barba-container" >
         {{> body}}
     </div>
 </div>
