--- a/static/less/_homepage.less
+++ b/static/less/_homepage.less
@@ -1,7 +1,9 @@
 @import "_variables";
 .homepage {
   &__visual {
-    background: url("/static/img/bg.jpg") 50% 50% no-repeat;
+    //background: url("/static/img/bg.jpg") 50% 50% no-repeat;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: ~"calc(100vh - 155px)";
