--- a/fe-web/render/body/posts.hbs
+++ b/fe-web/render/body/posts.hbs
@@ -1,11 +1,15 @@
 <div class="posts-ctr">
-    <div class="homepage__visual" style="background-image: url('/static/img/posts-cover.jpg')">
-        <div class="content-wrapper">
-            <div class="visual__text">
-                <p>Posts</p>
+    <div class="bg-image-ctr">
+        <div class="homepage__visual"
+             data-mediator="bg-image"
+             data-image="/static/img/posts-cover.jpg">
+            <div class="content-wrapper">
+                <div class="slidein-05 visual__text">
+                    <p>Posts</p>
+                </div>
             </div>
-        </div>
 
+        </div>
     </div>
     <div class="posts__wrapper content-wrapper">
         <h2 class="title posts-title">
