--- a/fe-web/render/include/header.hbs
+++ b/fe-web/render/include/header.hbs
@@ -1,19 +1,28 @@
 <header class="header" data-mediator="menu-visibility">
     <a href="/" class="text-ctr">
-        <div class="equalizer-CTR">
-            <div class="bar-c">
-                <div id="bar-1" class="bar"></div>
-                <div id="bar-2" class="bar"></div>
-                <div id="bar-3" class="bar"></div>
-                <div id="bar-4" class="bar"></div>
-                <div id="bar-5" class="bar"></div>
-                <div id="bar-6" class="bar"></div>
-            </div>
-        </div>
+        <!--<div class="equalizer-CTR">-->
+            <!--<div class="bar-c">-->
+                <!--<div id="bar-1" class="bar"></div>-->
+                <!--<div id="bar-2" class="bar"></div>-->
+                <!--<div id="bar-3" class="bar"></div>-->
+                <!--<div id="bar-4" class="bar"></div>-->
+                <!--<div id="bar-5" class="bar"></div>-->
+                <!--<div id="bar-6" class="bar"></div>-->
+            <!--</div>-->
+        <!--</div>-->
 
         <h1 class="title">
             Stonebridge Studio
         </h1>
+        <div class="spinner-ctr">
+            <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+            </div>
+        </div>
     </a>
     {{> menu}}
 </header>
