--- a/static/less/_animations.less
+++ b/static/less/_animations.less
@@ -1,3 +1,5 @@
+@import "_variables";
+@import "_spinner";
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -7,13 +9,49 @@
     opacity: 1;
   }
 }
+
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
 }
+
 .animated {
   -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slidein-05 {
+  animation-duration: 0.7s;
+  animation-fill-mode: both;
+  animation-name: slidein;
+}
+.slidein-05-01{
+  animation-duration: 0.7s;
+  animation-delay: 0.1s;
+  animation-fill-mode: both;
+  animation-name: slidein;
+}
+.bg-image-ctr{
+  background-color: fade(@dark-olive-green,100%);
+}
+[data-mediator="bg-image"]{
+  //opacity: 0;
+
 }
