--- a/static/less/_header.less
+++ b/static/less/_header.less
@@ -9,7 +9,7 @@
   background: @dark-olive-green;
   display: flex;
   justify-content: center;
-
+  align-items: center;
   .text-ctr {
 
     font-size: 20px;
