--- a/fe-web/render/body/homepage.hbs
+++ b/fe-web/render/body/homepage.hbs
@@ -61,9 +61,11 @@
             </a>
         </div>
     </div>
-    <div class="post-image-zoomed">
-        <div class="post-image-zoomed__text-panel">
-            <p class="text-js"></p>
+    <div data-mediator="post-image-zoomed" class="post-image-zoomed">
+        <div class="content-wrapper js-thumb-ctr">
+            <div class="post-image-zoomed__text-panel">
+                <p class="text-js"></p>
+            </div>
         </div>
     </div>
 
