--- a/fe-web/render/include/post.hbs
+++ b/fe-web/render/include/post.hbs
@@ -1,4 +1,4 @@
-<div class="post line-effect">
+<div data-mediator="post-thumbnail" class="post line-effect">
     <div class="line-1"><i></i></div>
     <div class="line-2"><i></i></div>
     <div class="line-3"><i></i></div>
