--- a/fe-web/render/layout/index.hbs
+++ b/fe-web/render/layout/index.hbs
@@ -18,7 +18,7 @@
 {{> svgs}}
 {{> header}}
 
-<div id="barba-wrapper" data-mediator="page-transitions">
+<div id="barba-wrapper" >
     <div class="barba-container" >
         {{> body}}
     </div>
