--- a/fe-web/render/body/posts.hbs
+++ b/fe-web/render/body/posts.hbs
@@ -23,4 +23,12 @@
         {{/each}}
 
     </div>
+    <div data-mediator="post-image-zoomed" class="post-image-zoomed">
+        <div class="content-wrapper js-thumb-ctr">
+            <div class="post-image-zoomed__text-panel">
+                <p class="text-js"></p>
+            </div>
+        </div>
+
+    </div>
 </div>
