--- a/fe-web/render/include/menu.hbs
+++ b/fe-web/render/include/menu.hbs
@@ -1,4 +1,4 @@
-<div class="menu-ctr {{__pagename__}}">
+<div class="menu-ctr {{__pagename__}}" data-mediator="menu">
     <div class="nav-trigger">
         <div class="nav-trigger__elements">
             <span></span>
@@ -9,7 +9,7 @@
     <nav class="menu">
         <h2 class="menu__title">stonebridge studio</h2>
         <ul>
-            <li class="menu__item homepage-btn line-effect">
+            <li  class="menu__item homepage-btn line-effect">
                 <div class="line-2"><i></i></div>
 
                 <div class="line-3"><i></i></div>
