--- a/fe-web/render/include/scripts.hbs
+++ b/fe-web/render/include/scripts.hbs
@@ -1,7 +1,5 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
-<script src="/static/js/main.js"></script>
-<script src="/static/js/libs/require.js" async data-main="/static/js/config.js"></script>
-{{#if _production}}
+ {{#if _production}}
+     <script src="/static/js/optimized.js" async></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -12,76 +10,8 @@
     ga('send', 'pageview');
 
 </script>
-{{/if}}
-<!--<script src="/static/js/barba.min.js"></script>-->
-<!--<script-->
-        <!--src="//code.jquery.com/jquery-1.12.4.min.js"-->
-        <!--integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="-->
-        <!--crossorigin="anonymous"></script>-->
-<!--<script>-->
-    <!--var FadeTransition = Barba.BaseTransition.extend({-->
-        <!--start: function() {-->
-            <!--/**-->
-             <!--* This function is automatically called as soon the Transition starts-->
-             <!--* this.newContainerLoading is a Promise for the loading of the new container-->
-             <!--* (Barba.js also comes with an handy Promise polyfill!)-->
-             <!--*/-->
+{{else}}
 
-            <!--// As soon the loading is finished and the old page is faded out, let's fade the new page-->
-            <!--Promise-->
-                    <!--.all([this.newContainerLoading, this.fadeOut()])-->
-                    <!--.then(this.fadeIn.bind(this));-->
-        <!--},-->
+     <script src="/static/js/libs/require.js" async data-main="/static/js/config.js"></script>
 
-        <!--fadeOut: function() {-->
-            <!--/**-->
-             <!--* this.oldContainer is the HTMLElement of the old Container-->
-             <!--*/-->
-
-            <!--return $(this.oldContainer).animate({ opacity: 0 }).promise();-->
-        <!--},-->
-
-        <!--fadeIn: function() {-->
-            <!--/**-->
-             <!--* this.newContainer is the HTMLElement of the new Container-->
-             <!--* At this stage newContainer is on the DOM (inside our #barba-container and with visibility: hidden)-->
-             <!--* Please note, newContainer is available just after newContainerLoading is resolved!-->
-             <!--*/-->
-
-            <!--var _this = this;-->
-            <!--var $el = $(this.newContainer);-->
-
-            <!--$(this.oldContainer).hide();-->
-
-            <!--$el.css({-->
-                <!--visibility : 'visible',-->
-                <!--opacity : 0-->
-            <!--});-->
-
-            <!--$el.animate({ opacity: 1 }, 400, function() {-->
-                <!--/**-->
-                 <!--* Do not forget to call .done() as soon your transition is finished!-->
-                 <!--* .done() will automatically remove from the DOM the old Container-->
-                 <!--*/-->
-
-                <!--_this.done();-->
-            <!--});-->
-        <!--}-->
-    <!--});-->
-
-    <!--/**-->
-     <!--* Next step, you have to tell Barba to use the new Transition-->
-     <!--*/-->
-
-    <!--Barba.Pjax.getTransition = function() {-->
-        <!--/**-->
-         <!--* Here you can use your own logic!-->
-         <!--* For example you can use different Transition based on the current page or link...-->
-         <!--*/-->
-
-        <!--return FadeTransition;-->
-    <!--};-->
-    <!--//Please note, the DOM should be ready-->
-    <!--Barba.Pjax.start();-->
-
-<!--</script>-->
+ {{/if}}
