--- a/static/less/_menu.less
+++ b/static/less/_menu.less
@@ -69,15 +69,15 @@
     padding: 20px 120px 20px 40px;
     transition: all .3s ease-out;
 
-    .homepage &.homepage {
+    .homepage &.homepage-btn {
       .common-effect();
       pointer-events: none;
     }
-    .artists &.artists {
+    .artists &.artists-btn {
       .common-effect();
       pointer-events: none;
     }
-    .who-we-are &.who-we-are {
+    .who-we-are &.who-we-are-btn {
       .common-effect();
       pointer-events: none;
     }
