--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -21,4 +21,12 @@
 
         </div>
     </section>
+    <section class="seo-ctr">
+        <div class="fields">
+            {{#seo.fields}}
+                {{> field-builder this}}
+            {{/seo.fields}}
+
+        </div>
+    </section>
 </form>
