--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -21,8 +21,9 @@
 
         </div>
     </section>
-    <section class="seo-ctr">
-        <div class="fields">
+    <section class="seo-ctr" data-mediator="accordion">
+        <h2 class="seo__title" data-accordion-button>Configurazione SEO</h2>
+        <div class="fields seo-fields hidden" data-accordion-expand>
             {{#seo.fields}}
                 {{> field-builder this}}
             {{/seo.fields}}
