--- a/fe-web/render/body/artist-detail.hbs
+++ b/fe-web/render/body/artist-detail.hbs
@@ -111,7 +111,7 @@
 
                         {{#each gruppo.dischi}}
                             <div class="disco">
-                                <a href="/dischi/{{_id}}">
+                                <a href="{{this.seo.seo_url}}">
                                     <img src="{{this.coverImage}}">
                                     <div class="disco__text-ctr">
                                         <p class="disco__title"> {{this.name}}</p>
