--- a/fe-web/render/include/metatags.hbs
+++ b/fe-web/render/include/metatags.hbs
@@ -1,11 +1,12 @@
 <meta name="author" content="Stone Bridge Studio"/>
-<meta name="description" content="This place got something."/>
-<meta property='og:title'  content="Stone Bridge Studio" />
-<meta property="og:url" content="http://www.stonebridgestudio.it"/>
+<meta name="description" content="{{seoData.seo_description}}"/>
+<meta property='og:title' content="{{seoData.seo_title}}"/>
+<meta property="og:url" content="http://www.stonebridgestudio.it{{seoData.seo_url}}"/>
 <meta property="og:site_name" content="Stone Bridge Studio"/>
 <meta property="og:type" content="website"/>
-<meta property="og:description" content="This place got something.">
-<meta property="og:image" content="http://www.stonebridgestudio.it/static/img/profile.jpg" />
+<meta property="og:description" content="{{seoData.seo_description}}">
+<meta property="og:image" content="{{seoData.seo_shareImage}}"/>
 <title>
-   {{title}}
+    {{seoData.seo_title}}
 </title>
+<link rel="canonical" href="http://www.stonebridgestudio.it{{seoData.seo_url}}" />
