--- a/cms/fe-web/render/include/fields/text-field.hbs
+++ b/cms/fe-web/render/include/fields/text-field.hbs
@@ -3,6 +3,7 @@
         {{#if label}}<legend>{{label}}</legend>{{/if}}
         <input autocomplete="false"
                {{#if maxlength}}maxlength="{{maxlength}}"{{/if}}
+               {{#if readonly}}readonly{{/if}}
                placeholder="scrivi qui..." name="{{name}}" type="text" value="{{value}}">
     </fieldset>
 </div>
