--- a/cms/static/less/_contents.less
+++ b/cms/static/less/_contents.less
@@ -1,3 +1,9 @@
+.seo__title {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 20px 0;
+  font-size: 20px;
+}
 .content {
   &s {
     padding-top: 68px;
