--- a/fe-web/render/include/artist-thumb.hbs
+++ b/fe-web/render/include/artist-thumb.hbs
@@ -1,5 +1,5 @@
 <div class="artist-thumb">
-    <a href="/gruppi/{{_id}}">
+    <a href="{{seo.seo_url}}">
         <div class="artist__image line-effect"
              style="background-image: url('{{coverImage}}')">
             <div class="line-1"><i></i></div>
