--- a/static/less/_sprite.less
+++ b/static/less/_sprite.less
@@ -1,15 +1,4 @@
-@import "_variables";
-.sprite{
-  &.facebook {
-
-    width: 30px;
-    height: 30px;
-    fill: @dark-olive-green;
-  }
-  &.instagram {
-
-    width: 30px;
-    height: 30px;
-    fill: @dark-olive-green;
-  }
+.svg-common() {
+	background: url("../gfx/sprite.svg") no-repeat;
 }
+
