--- a/cms/fe-web/render/include/fields/document-field.hbs
+++ b/cms/fe-web/render/include/fields/document-field.hbs
@@ -4,11 +4,22 @@
             <legend>{{label}}</legend>{{/if}}
         <div class="document-ctr" data-mediator="document-field">
             <img class="js-img" src="{{value}}" alt="Image preview...">
-            {{#if value}}
-                <input type="hidden" value="{{value}}" name="{{name}}">
-            {{/if}}
+            <div class="img-ctr">
+                <div class="image-url-ctr {{#if value}}{{else}}hidden{{/if}}">
 
-            <input class="js-input"  autocomplete="off" type="file" name="{{name}}" accept="{{mimetype}}">
-        </div>
+
+                {{#if value}}
+
+                    <input class="js-img-url" type="text" readonly value="{{value}}" name="{{name}}">
+
+                {{/if}}
+                <a href="javascript:void(0);" class="js-copy">
+                    <span class="typcn typcn-clipboard"></span>
+                </a>
+                </div>
+                <input class="js-input"   autocomplete="off" type="file" name="{{name}}" accept="{{mimetype}}">
+
+            </div>
+             </div>
     </fieldset>
 </div>
