--- a/cms/static/less/_contents.less
+++ b/cms/static/less/_contents.less
@@ -28,3 +28,22 @@
     }
   }
 }
+.js-copy{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  background: mediumseagreen;
+  color: white;
+  border-radius: 50%;
+  font-size: 12px;
+  margin-left:10px;
+}
+.image-url-ctr {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.img-ctr{
+  margin-left:10px;
+}
