--- a/static/less/_disco.less
+++ b/static/less/_disco.less
@@ -4,6 +4,11 @@
   &-detail {
 
   }
+  &__author{
+    color: white;
+    font-weight: bold;
+    margin-right: 5px;
+  }
   &-image {
     background-position: center;
     background-size: cover;
