--- a/static/less/_footer.less
+++ b/static/less/_footer.less
@@ -2,12 +2,12 @@
 
 .footer {
   background: @dark-olive-green;
-
+  min-height: 200px;
 
   .buttons {
     display: flex;
     justify-content: flex-end;
-    padding:20px 13px;
+    padding: 20px 13px;
 
     align-items: flex-end;
   }
