--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -146,5 +146,26 @@
       margin-bottom: 30px;
 
     }
+
+  }
+  .post-image-zoomed.zoom-completed {
+    overflow: auto;
+  }
+  .post-image-zoomed .js-thumb-ctr {
+    display: block;
+
+  }
+  .post-image-zoomed__text-panel {
+    width: 100%;
+    padding: 0;
+  }
+  .zoom-completed .post__image__over {
+    position: relative;
+    top: 54px!important;
+  }
+  .post-image-zoomed__text-panel {
+    width: 100%;
+    padding: 0;
+    height: auto;
   }
 }
